--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ https://templatemo.com/tm-518-sentra
                                             <div class="text-content">
                                                 <h4>Super Mario 64</h4>
                                                 <span>+1 Ambrósio <strong>(pergunta)</strong> Sorteio
-                                                    <strong>Zero</strong></span>
+                                                    <strong>ZERO</strong></span>
                                                 <p><strong>Qual é o nome deste jogo?</strong>
                                                     <br />
                                                     Super Mario 64 é um jogo eletrônico de plataforma desenvolvido pela
@@ -271,7 +271,7 @@ https://templatemo.com/tm-518-sentra
                                             <div class="text-content">
                                                 <h4>Apex Legends</h4>
                                                 <span>+1 Camilo <strong>(pergunta)</strong> Sorteio
-                                                    <strong>Zero</strong></span>
+                                                    <strong>ZERO</strong></span>
                                                 <p><strong>Qual é o nome deste jogo?</strong>
                                                     <br />
                                                     É um jogo eletrônico free-to-play do gênero battle royale
@@ -322,14 +322,97 @@ https://templatemo.com/tm-518-sentra
                                     </li>
                                     <li>
                                         <div class="item">
-                                            <img src="img/rodada-final/marquinhos-09.jpeg" alt="" width="306" height="230">
+                                            <img src="img/rodada-final/marquinhos-09.jpeg" alt="" width="306"
+                                                height="230">
                                             <div class="text-content">
                                                 <h4>Tomb Raider</h4>
                                                 <span>+1 Marquinhos <strong>(pergunta)</strong> +1 Ambrósio
                                                     <strong>(resposta)</strong></span>
                                                 <p><strong>Qual é o nome deste jogo?</strong>
                                                     <br />
-                                                    Tomb Raider é um jogo eletrônico de ação-aventura e plataforma desenvolvido pela Core Design e publicado pela Eidos Interactive. Ele foi lançado originalmente em 1996 para o Sega Saturn, e depois para o MS-DOS e PlayStation.
+                                                    Tomb Raider é um jogo eletrônico de ação-aventura e plataforma
+                                                    desenvolvido pela Core Design e publicado pela Eidos Interactive.
+                                                    Ele foi lançado originalmente em 1996 para o Sega Saturn, e depois
+                                                    para o MS-DOS e PlayStation.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/renato-02.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Shinobi Legions</h4>
+                                                <span>+1 Renato <strong>(pergunta)</strong> Sorteio
+                                                    <strong>UM</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Shinobi Legions é um jogo de ação tradicional de rolagem lateral, o
+                                                    que significa que cada nível deve ser concluído da esquerda para a
+                                                    direita. Ao longo do caminho, o ninja protagonista Sho encontrará
+                                                    vários inimigos e obstáculos que irão testar a habilidade do
+                                                    jogador, incluindo encontros com chefes. A jogabilidade em si é
+                                                    basicamente a mesma de Shinobi III: Return of the Ninja Master . No
+                                                    entanto, desta vez a ênfase está no uso da katana de Sho em vez de
+                                                    sua shuriken , e botões separados agora são usados ​​para
+                                                    controlá-los.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/ambrosio-04.jpeg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Tony Hawk's Pro Skater</h4>
+                                                <span>+1 Ambrósio <strong>(pergunta)</strong> +1 Dida
+                                                    <strong>(resposta)</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Tony Hawk's é uma série de jogos de computador com foco em Skate
+                                                    tendo o skatista profissional Tony Hawk como principal
+                                                    personalidade. De acordo com Joel Jewett, cofundador da Neversoft, a
+                                                    série surgiu por demanda da Activision quando a mesma percebeu, nos
+                                                    anos noventa, a popularidade do Skate na época.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/camilo-05.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>RAID: Shadow Legends</h4>
+                                                <span>+1 Camilo <strong>(pergunta)</strong> Sorteio
+                                                    <strong>UM</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Raid: Shadow Legends é um jogo móvel freemium desenvolvido e
+                                                    publicado pela desenvolvedora de jogos israelense Plarium Games. Uma
+                                                    porta de PC para Raid: Shadow Legends foi lançada em 21 de janeiro
+                                                    de 2020.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/rodada-final/dida-03.jpeg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>The Neverhood</h4>
+                                                <span>+1 Dida <strong>(pergunta)</strong> +1 Ambrósio
+                                                    <strong>(resposta)</strong></span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    The Neverhood é um jogo claymation de aventura em primeira pessoa
+                                                    lançado para computadores com Windows 95, foi criado pelo designer
+                                                    de jogos e cartunista Doug TenNapel, produzido pela antiga
+                                                    Neverhood, Inc. e lançado pela antiga DreamWorks Studios.
                                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                                 </p>
